<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="person"
            type="com.hfm.vdc.Person" />
    </data>

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.hfm.vdc.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                app:logo="@mipmap/ic_launcher"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="ifContentScrolls"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical"
            tools:context="com.hfm.vdc.MainActivity"
            tools:showIn="@layout/activity_main">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/clear_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-16dp"
                    android:layout_marginTop="-16dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_clear_black_24dp"
                    />


            <EditText
                android:id="@+id/editText_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:text="@{person.fname}" />

            <EditText
                android:id="@+id/editText_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_fname"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:text="@{person.lname}" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_lname"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_call_black_24dp"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:text="@{person.phone}" />

            <EditText
                android:id="@+id/editText_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_phone"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_access_time_black_24dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:text="@{person.age}" />

            <EditText
                android:id="@+id/editText_edu"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_age"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_school_black_24dp"
                android:ems="10"
                android:hint="@string/education"
                android:inputType="text"
                android:lines="1"
                android:text="@{person.edu}" />

            <EditText
                android:id="@+id/editText_organ"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_edu"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_domain_black_24dp"
                android:ems="10"
                android:hint="@string/organization"
                android:inputType="text"
                android:lines="1"
                android:text="@{person.organ}" />

            <EditText
                android:id="@+id/editText_job"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_organ"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_work_black_24dp"
                android:ems="10"
                android:hint="@string/job"
                android:inputType="text"
                android:lines="1"
                android:text="@{person.job}" />
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_job"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/emailAddress"
                android:inputType="textEmailAddress"
                android:text="@{person.email}" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_email"
                android:drawableLeft="@drawable/ic_add_black"
                android:text="@string/add" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_remove"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button_add"
                android:layout_toLeftOf="@id/button_add"
                android:drawableLeft="@drawable/ic_delete"
                android:enabled="@{person.dbId != -1 ? true : false}"
                android:text="@string/remove" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_correct"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/button_remove"
                android:layout_toLeftOf="@+id/button_remove"
                android:layout_toStartOf="@+id/button_remove"
                android:drawableLeft="@drawable/ic_save_black"
                android:enabled="@{person.dbId != -1 ? true : false }"
                android:text="@string/correct" />

        </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_as_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/menu" />

    </android.support.design.widget.CoordinatorLayout>

</layout>